--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 					</div>
 	  			</div>
 	  		</div>
-	  		<div class="row flex-fill scroll-row">
-	  			<div class="col mh-100 scroll-column">
+	  		<div class="row flex-fill scroll_row">
+	  			<div class="col mh-100 scroll_column">
 		  			<div id="content" class="scroll-area-sm" data-offset="0">
                         <h4 id="fat">@fat</h4>
 						<p>Placeholder content for the scrollspy example. You got the finest architecture. Passport stamps, she's cosmopolitan. Fine, fresh, fierce, we got it on lock. Never planned that one day I'd be losing you. She eats your heart out. Your kiss is cosmic, every move is magic. I mean the ones, I mean like she's the one. Greetings loved ones let's take a journey. Just own the night like the 4th of July! But you'd rather get wasted.</p>
