Start plugging in new data

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	                </div>
 	            </div>
 	  		</div>
-	  		<div class="row flex-shrink-0 text-center footer" style="background-color:  rgba(7, 52, 4, 0.8);">
-				<div class="col">by angelblue05</div>
+	  		<div class="row flex-shrink-0 text-center footer">
+				<div class="col">Reach out to us if you have any more questions.</div>
 			</div>
 	  	</div>
 	 </div>
