--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	            </div>
 	  		</div>
 	  		<div class="row flex-shrink-0 text-center footer">
-				<div class="col">Reach out to us if you have any more questions.</div>
+				<div class="col">Reach out to us in-game.</div>
 			</div>
 	  	</div>
 	 </div>
