--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   	<script src="js/main.js" defer></script>
 
   	<div class="bg-cover h-100">
-	  	<div class="container h-100 d-flex flex-column">
+	  	<div id="main" class="container h-100 d-flex flex-column">
 	  		<div class="row justify-content-center flex-shrink-0 header">
 	  			<div class="col text-center">
 	  				<div class="container"><img id="img-crest" src="./css/logo.png" alt="Crest" /></div>
