--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 	  	<div id="main" class="container h-100 d-flex flex-column">
 	  		<div class="row justify-content-center flex-shrink-0 header">
 	  			<div class="col text-center">
-	  				<div class="container"><img id="img-crest" src="./css/logo.png" alt="Crest" /></div>
-	  				<div class="container"><img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" /></div>
+	  				<a href="#top">
+	  					<div class="container"><img id="img-crest" src="./css/logo.png" alt="Crest" /></div>
+	  					<div class="container"><img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" /></div>
+	  				</a>
 	  				<div class="container"><h2>Pocketbook</h2></div>
 					<div class="container">
 					    <button id="button_section" type="button" class="btn btn-lg btn-light dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">Select section</button>
@@ -33,6 +35,7 @@
 	  		<div id="scroll_row" class="row flex-fill">
 	  			<div id="scroll_column" class="col mh-100">
 		  			<div id="scroll_content" class="scroll-area-sm" data-offset="0">
+		  				<a id="top"></a>
 	                </div>
 	            </div>
 	  		</div>
