--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	            </div>
 	  		</div>
 	  		<div class="row flex-shrink-0 text-center footer">
-				<div class="col">Reach out to Swords of Light on Parkog in-game.</div>
+				<div class="col">Reach out to Swords of Light on Parkog.</div>
 			</div>
 	  	</div>
 	 </div>
