--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,35 +24,51 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-  	<script src="js/utils.js" defer></script>
-  	<script src="js/main.js" defer></script>
+	<!--<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.3.1/anchor.js" integrity="sha512-f77bYAdwYR5OdAY5mDb5euqEmYi3jsAuVEb0a0VTsodeXU8v3F/mYJE7EhZ53ahmEa5AZ93YaOju2jsPqv9USQ==" crossorigin="anonymous"></script>
 
-  	<div class="bg-cover h-100">
-	  	<div id="main" class="container h-100 d-flex flex-column">
-	  		<div class="row justify-content-center flex-shrink-0 header">
-	  			<div class="col text-center">
-	  				<a href="#top">
-	  					<div class="container"><img id="img-crest" src="./css/logo.png" alt="Crest" /></div>
-	  					<div class="container"><img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" /></div>
-	  				</a>
-	  				<div class="container"><h2>Pocketbook</h2></div>
-					<div class="container">
-					    <button id="button_section" type="button" class="btn btn-lg btn-light dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">Select section</button>
-					    <div id="scroll_dropmenu" class="dropdown-menu"></div>
-					</div>
-	  			</div>
-	  		</div>
-	  		<div id="scroll_row" class="row flex-fill">
-	  			<div id="scroll_column" class="col mh-100">
-		  			<div id="scroll_content" class="scroll-area-sm" data-offset="0">
-		  				<a id="top"></a>
-	                </div>
-	            </div>
-	  		</div>
-	  		<div class="row flex-shrink-0 text-center footer">
-				<div class="col">Reach out to Swords of Light on Parkog.</div>
+	<div id="main" class="container">
+		<header>
+			<div class="row align-items-center">
+				<div class="col text-center">
+					<a id="top"></a>
+					<img id="img-crest" src="./css/logo.png" alt="Crest" />
+				</div>
 			</div>
-	  	</div>
-	 </div>
+			<div class="row align-items-start">
+				<div class="col text-center">
+	  				<img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
+	  				<h2>Pocketbook</h2>
+				</div>
+			</div>
+		<header>
+		<nav class="navbar navbar-expand-sm sticky-top justify-content-center" role="navigation">
+			<div class="row align-items-center">
+				<div class="col">
+					<div class="dropdown">
+					  	<button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
+					  	<div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
+					</div>
+				</div>
+				<div id="js-top" class="col-auto" style="display:none;">
+					<a href="#top" class="bi-arrow-up-circle" role="button"></a>
+				</div>
+			</div>
+		</nav>
+		<div id="scroll-container" class="row">
+			<div class="col">
+				<div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
+        	</div>
+    	</div>
+  		<div class="row">
+			<div class="col text-center">
+				<div class="footer fixed-bottom">
+					Reach out to Swords of Light on Parkog.
+				</div>
+			</div>
+		</div>
+	</div>
+  	<script type="text/javascript" src="js/main.js"></script>
+  	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
