Fix unclosed header

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  				<h2>Pocketbook</h2>
 				</div>
 			</div>
-		<header>
+		</header>
 		<nav class="navbar navbar-expand-sm sticky-top justify-content-center" role="navigation">
 			<div class="row align-items-center">
 				<div class="col">
