Fix container padding

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<!--<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.3.1/anchor.js" integrity="sha512-f77bYAdwYR5OdAY5mDb5euqEmYi3jsAuVEb0a0VTsodeXU8v3F/mYJE7EhZ53ahmEa5AZ93YaOju2jsPqv9USQ==" crossorigin="anonymous"></script>
 
-	<div id="main" class="container">
+	<div id="main" class="container px-0">
 		<header>
 			<div class="row align-items-center">
 				<div class="col text-center">
@@ -44,7 +44,7 @@
 		</header>
 		<nav class="navbar navbar-expand-sm sticky-top justify-content-center" role="navigation">
 			<div class="row align-items-center">
-				<div class="col">
+				<div class="col-10">
 					<div class="dropdown">
 					  	<button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
 					  	<div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 		</nav>
-    	<div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
+		<div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
   		<div class="row">
 			<div class="col text-center">
 				<div class="footer fixed-bottom">
