--- a/index.html
+++ b/index.html
@@ -24,44 +24,36 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-	<!--<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.3.1/anchor.js" integrity="sha512-f77bYAdwYR5OdAY5mDb5euqEmYi3jsAuVEb0a0VTsodeXU8v3F/mYJE7EhZ53ahmEa5AZ93YaOju2jsPqv9USQ==" crossorigin="anonymous"></script>
 
-	<div id="main" class="container px-0">
-		<header>
-			<div class="row align-items-center">
-				<div class="col text-center">
+	<div class="bg-cover"></div>
+	<div class="content">
+		<div id="main">
+			<header>
+				<div class="text-center">
 					<a id="top"></a>
 					<img id="img-crest" src="./css/logo.png" alt="Crest" />
 				</div>
-			</div>
-			<div class="row align-items-start">
-				<div class="col text-center">
-	  				<img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
-	  				<h2>Pocketbook</h2>
-				</div>
-			</div>
-		</header>
-		<nav class="navbar navbar-expand-sm sticky-top justify-content-center" role="navigation">
-			<div class="row align-items-center">
-				<div class="col-10">
-					<div class="dropdown">
-					  	<button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
-					  	<div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
+				<div class="text-center">
+					<img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
+			  		<h2>Pocketbook</h2>
+			  	</div>
+			</header>
+			<nav class="navbar navbar-expand-sm sticky-top justify-content-center" role="navigation">
+				<div class="row align-items-center">
+					<div class="col text-center justify-content-center">
+						<div class="dropdown">
+						  	<button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
+						  	<div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
+						</div>
+					</div>
+					<div id="js-top" class="col-auto" style="display: none;">
+						<a href="#top" class="bi-arrow-up-circle" role="button"></a>
 					</div>
 				</div>
-				<div id="js-top" class="col-auto" style="display:none;">
-					<a href="#top" class="bi-arrow-up-circle" role="button"></a>
-				</div>
-			</div>
-		</nav>
-		<div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
-  		<div class="row">
-			<div class="col text-center">
-				<div class="footer fixed-bottom">
-					Reach out to Swords of Light on Parkog.
-				</div>
-			</div>
+			</nav>
+			<div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
+			<div class="footer fixed-bottom text-center">Reach out to Swords of Light on Parkog.</div>
 		</div>
 	</div>
   	<script type="text/javascript" src="js/main.js"></script>
