--- a/index.html
+++ b/index.html
@@ -39,16 +39,17 @@
                     <h2>Pocketbook</h2>
                 </div>
             </header>
-            <nav class="navbar navbar-expand-sm sticky-top justify-content-center" role="navigation">
+            <nav class="container sticky-top justify-content-center" role="navigation">
                 <div class="row align-items-center">
+                    <div class="col"></div>
                     <div class="col text-center justify-content-center">
                         <div class="dropdown">
                             <button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
                             <div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
                         </div>
                     </div>
-                    <div id="js-top" class="col-auto" style="display: none;">
-                        <a href="#top" class="bi-arrow-up-circle" role="button"></a>
+                    <div id="js-top" class="col text-right">
+                        <a style="display: none;" href="#top" class="bi-arrow-up-circle" role="button"></a>
                     </div>
                 </div>
             </nav>
