--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </nav>
             <div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
-            <div class="footer fixed-bottom text-center">Reach out to Swords of Light on Parkog.</div>
+            <footer class="fixed-bottom text-center">Reach out to Swords of Light on Parkog.</footer>
         </div>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
