--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L7203ZH0B7"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-L7203ZH0B7');
-    </script>
     <title>SoL Pocketbook</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L7203ZH0B7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-L7203ZH0B7');
+    </script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -29,35 +30,40 @@
     <div class="bg-cover"></div>
     <div class="content">
         <div id="main">
-            <header>
-                <div class="text-center">
+            <header class="text-center">
+                <div>
                     <a id="top"></a>
                     <img id="img-crest" src="./css/logo.png" alt="Crest" />
                 </div>
-                <div class="text-center">
+                <div>
                     <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
                     <h2>Pocketbook</h2>
                 </div>
             </header>
+
             <nav class="container-fluid sticky-top justify-content-center" role="navigation">
                 <div class="row align-items-center">
-                    <div class="js-top col-md col-0" style="display: none;"></div>
-                    <div class=" col-md col text-center justify-content-center">
+                    <div class="col-md col-0 js-top" style="display: none;"></div>
+                    <div class="col-md col text-center">
                         <div class="dropdown">
                             <button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
                             <div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
                         </div>
                     </div>
-                    <div id="js-top" class="js-top col-md col-2 text-right" style="display: none;">
+                    <div id="js-top" class="col-md col-2 text-right js-top" style="display: none;">
                         <a href="#top" class="bi-arrow-up-circle" role="button"></a>
                     </div>
                 </div>
             </nav>
             <div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
-            <footer class="fixed-bottom text-center">Reach out to Swords of Light on Parkog.</footer>
+            
+            <footer class="fixed-bottom text-center">
+                Reach out to Swords of Light on Parkog.
+            </footer>
         </div>
     </div>
-    <script type="text/javascript" src="js/main.js"></script>
+
+    <script type="text/javascript" src="js/formatData.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
