Update back to top col

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
                         </div>
                     </div>
-                    <div id="js-top" class="col-md col-2 text-right js-top" style="display: none;">
+                    <div id="js-top" class="col-md col text-right js-top" style="display: none;">
                         <a href="#top" class="bi-arrow-up-circle" role="button"></a>
                     </div>
                 </div>
