Remove useless class on scroll-content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </nav>
-            <div id="scroll-content" class="scroll-area-sm" data-offset="0"></div>
+            <div id="scroll-content" data-offset="0"></div>
             
             <footer class="fixed-bottom text-center">
                 Reach out to Swords of Light on Parkog.
