Support data footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="bg-cover"></div>
     <div class="content">
-        <div id="main">
+        <div id="main" class="container">
             <header class="text-center">
                 <div>
                     <a id="top"></a>
