--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
     <div class="bg-cover"></div>
     <div class="content">
         <div id="main" class="container">
-            <header class="text-center">
-                <div>
-                    <a id="top"></a>
-                    <img id="img-crest" src="./css/logo.png" alt="Crest" />
+            <header>
+                <div class="row text-center">
+                    <div class="col">
+                        <a id="top"></a>
+                        <img id="img-crest" src="./css/logo.png" alt="Crest" />
+                    </div>
                 </div>
-                <div>
-                    <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
-                    <h2>Pocketbook</h2>
+                <div class="row text-center">
+                    <div class="col">
+                        <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
+                        <h2>Pocketbook</h2>
+                    </div>
                 </div>
             </header>
 
@@ -56,7 +60,7 @@
                 </div>
             </nav>
             <div id="scroll-content" data-offset="0"></div>
-            
+
             <footer class="fixed-bottom text-center">
                 Reach out to Swords of Light on Parkog.
             </footer>
