--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.3.1/anchor.js" integrity="sha512-f77bYAdwYR5OdAY5mDb5euqEmYi3jsAuVEb0a0VTsodeXU8v3F/mYJE7EhZ53ahmEa5AZ93YaOju2jsPqv9USQ==" crossorigin="anonymous"></script>
 
-    <div class="bg-cover"></div>
+    <div class="bg-cover">
+        <div class="bg-color"></div>
+    </div>
     <div class="content">
         <div id="main" class="container">
             <header>
