Always show scrollbar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </nav>
-            <div id="scroll-content" data-offset="0"></div>
+            <section id="scroll-content" data-offset="0"></section>
 
             <footer class="fixed-bottom text-center">
                 Reach out to Swords of Light on Parkog.
