Revert "Always show scrollbar"
This reverts commit f682e2b2685858b924cc64675cb3daea805c0059.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </nav>
-            <section id="scroll-content" data-offset="0"></section>
+            <div id="scroll-content" data-offset="0"></div>
 
             <footer class="fixed-bottom text-center">
                 Reach out to Swords of Light on Parkog.
