--- a/index.html
+++ b/index.html
@@ -32,18 +32,14 @@
     </div>
     <div class="content">
         <div id="main" class="container">
-            <header>
-                <div class="row text-center">
-                    <div class="col">
-                        <a id="top"></a>
-                        <img id="img-crest" src="./css/logo.png" alt="Crest" />
-                    </div>
+            <header class="text-center">
+                <div>
+                    <a id="top"></a>
+                    <img id="img-crest" src="./css/logo.png" alt="Crest" />
                 </div>
-                <div class="row text-center">
-                    <div class="col">
-                        <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
-                        <h2>Pocketbook</h2>
-                    </div>
+                <div>
+                    <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
+                    <h2>Pocketbook</h2>
                 </div>
             </header>
 
@@ -61,7 +57,7 @@
                     </div>
                 </div>
             </nav>
-            <div id="scroll-content" data-offset="0"></div>
+            <section data-offset="0"></section>
 
             <footer class="fixed-bottom text-center">
                 Reach out to Swords of Light on Parkog.
