Revert "Adjust header again"
This reverts commit 85526ef344019a859afdc5b749c48d1b8d8df127.

--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
     </div>
     <div class="content">
         <div id="main" class="container">
-            <header class="text-center">
-                <div>
-                    <a id="top"></a>
-                    <img id="img-crest" src="./css/logo.png" alt="Crest" />
+            <header>
+                <div class="row text-center">
+                    <div class="col">
+                        <a id="top"></a>
+                        <img id="img-crest" src="./css/logo.png" alt="Crest" />
+                    </div>
                 </div>
-                <div>
-                    <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
-                    <h2>Pocketbook</h2>
+                <div class="row text-center">
+                    <div class="col">
+                        <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
+                        <h2>Pocketbook</h2>
+                    </div>
                 </div>
             </header>
 
@@ -57,7 +61,7 @@
                     </div>
                 </div>
             </nav>
-            <section data-offset="0"></section>
+            <div id="scroll-content" data-offset="0"></div>
 
             <footer class="fixed-bottom text-center">
                 Reach out to Swords of Light on Parkog.
