Add copy anchor link

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </footer>
     </div>
 
+    <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/formatData.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
