--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 
         <nav class="main container sticky-top justify-content-center" role="navigation">
             <div class="row align-items-center">
-                <div class="col-md col-0 js-top" style="display: none;"></div>
+                <div class="col-md col-0 js-top"></div>
                 <div class="col-md col text-center">
                     <div class="dropdown">
                         <button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
                         <div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
                     </div>
                 </div>
-                <div id="js-top" class="col-md col text-right js-top" style="display: none;">
+                <div id="js-top" class="col-md col text-right js-top">
                     <a href="#top" class="bi-arrow-up-circle" role="button"></a>
                 </div>
             </div>
