--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SoL Pocketbook</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SoL Pocketbook</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div id="js-top" class="col-md col text-right js-top">
-                    <a href="#top" class="bi-arrow-up-circle" role="button"></a>
+                    <a href="#top" title="Back to top" class="bi-arrow-up-circle" role="button"></a>
                 </div>
             </div>
         </nav>
