Support article timestamps

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 </div>
             </div>
         </nav>
-        <section class="main container" id="scroll-content" data-offset="0"></section>
+        <section class="main container" id="scroll-content" data-offset="0">
+            <p id="latest-articles"></p>
+        </section>
 
         <footer class="main container fixed-bottom text-center">
             Reach out to Swords of Light on Parkog.
