--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A collection of tips and tricks to become a better FoE player.">
     <title>SoL Pocketbook</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L7203ZH0B7"></script>
@@ -16,61 +17,60 @@
         gtag('config', 'G-L7203ZH0B7');
     </script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" integrity="sha512-Oy+sz5W86PK0ZIkawrG0iv7XwWhYecM3exvUtMKNJMekGFJtVAhibhRPTpmyTj8+lJCkmWfnpxKgT2OopquBHA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" integrity="sha512-Oy+sz5W86PK0ZIkawrG0iv7XwWhYecM3exvUtMKNJMekGFJtVAhibhRPTpmyTj8+lJCkmWfnpxKgT2OopquBHA==" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.3.1/anchor.js" integrity="sha512-f77bYAdwYR5OdAY5mDb5euqEmYi3jsAuVEb0a0VTsodeXU8v3F/mYJE7EhZ53ahmEa5AZ93YaOju2jsPqv9USQ==" crossorigin="anonymous"></script>
+    <div class="container-fluid p-0 p-md">
+        <div class="col col-md-8 col-lg-6 col-xl-5 mx-auto">
 
-    <div class="bg-cover">
-        <div class="bg-color"></div>
-    </div>
-    <div class="content">
-        <header class="main container text-center">
-            <div class="row">
-                <div class="col">
-                    <a id="top"></a>
-                    <img id="img-crest" src="./css/logo.png" alt="Crest" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <img id="img-logo" src="./css/swords-of-light.png" alt="Swords of Light" />
-                    <h2>Pocketbook</h2>
-                </div>
-            </div>
-        </header>
+            <header class="d-flex flex-column align-items-center mt-1 py-3 text-center">
+                <h1>Pocketbook</h1>
+                <hr class="m-0 mb-2">
+                <img src="images/swords-of-light.png" alt="Swords of Light">
+            </header>
 
-        <nav class="main container sticky-top justify-content-center" role="navigation">
-            <div class="row align-items-center">
-                <div class="col-md col-0 js-top"></div>
-                <div class="col-md col text-center">
-                    <div class="dropdown">
-                        <button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select section</button>
-                        <div id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
+            <nav class="container sticky-top py-2" role="navigation">
+                <div class="row">
+                    <div class="js-top col-0 col-md"></div>
+                    <div class="col text-center">
+                        <div class="dropdown">
+                            <button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-bs-toggle="dropdown" aria-expanded="false">Select section</button>
+                            <ul id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></ul>
+                        </div>
+                    </div>
+                    <div class="js-top col">
+                        <a href="#top" title="Back to top" class="bi-arrow-up-circle" role="button"></a>
                     </div>
                 </div>
-                <div id="js-top" class="col-md col text-right js-top">
-                    <a href="#top" title="Back to top" class="bi-arrow-up-circle" role="button"></a>
-                </div>
-            </div>
-        </nav>
-        <section class="main container" id="scroll-content" data-offset="0">
-            <p id="latest-articles"></p>
-        </section>
+            </nav>
 
-        <footer class="main container fixed-bottom text-center">
-            Reach out to Swords of Light on Parkog.
-        </footer>
+            <!-- Dynamic content here -->
+            <main id="content" class="p-4" data-offset="0">
+                <!-- Loading indicator -->
+                <div class="text-center">
+                    <div class="spinner-grow text-success" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+                <section id="latest-articles"></section>
+                <hr>
+            </main>
+
+        </div>
     </div>
 
-    <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/formatData.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <footer class="container-fluid fixed-bottom p-0">
+        <div class="col col-md-8 col-lg-6 col-xl-5 mx-auto text-center">Reach out to Swords of Light on Parkog.</div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.3.1/anchor.js" integrity="sha512-f77bYAdwYR5OdAY5mDb5euqEmYi3jsAuVEb0a0VTsodeXU8v3F/mYJE7EhZ53ahmEa5AZ93YaOju2jsPqv9USQ==" crossorigin="anonymous"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/formatData.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
