--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container-fluid p-0 p-md">
+    <div class="container-fluid p-0 p-md h-100">
         <div class="col col-md-8 col-lg-6 col-xl-5 mx-auto">
 
             <header class="d-flex flex-column align-items-center mt-1 py-3 text-center">
