--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container-fluid p-0 p-md h-100">
-        <div class="col col-md-8 col-lg-6 col-xl-5 mx-auto">
+    <div class="container-fluid p-0 p-md h-100 position-relative">
+        <div id="main-container" class="col col-md-8 col-lg-6 col-xl-5 mx-auto">
 
             <header class="d-flex flex-column align-items-center mt-1 py-3 text-center">
                 <h1>Pocketbook</h1>
@@ -31,23 +31,22 @@
                 <img src="images/swords-of-light.png" alt="Swords of Light">
             </header>
 
-            <nav class="container sticky-top py-2" role="navigation">
-                <div class="row">
-                    <div class="js-top col-0 col-md"></div>
-                    <div class="col text-center">
-                        <div class="dropdown">
-                            <button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-bs-toggle="dropdown" aria-expanded="false">Select section</button>
-                            <ul id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></ul>
-                        </div>
+            <nav class="sticky-top py-2" role="navigation">
+                <div class="position-relative">
+
+                    <div class="dropdown">
+                        <button class="btn btn-lg btn-light dropdown-toggle" type="button" id="button-section" data-bs-toggle="dropdown" aria-expanded="false">Select section</button>
+                        <ul id="scroll-dropmenu" class="dropdown-menu" aria-labelledby="dropdownMenuButton"></ul>
                     </div>
-                    <div class="js-top col">
+
+                    <div class="js-top position-absolute">
                         <a href="#top" title="Back to top" class="bi-arrow-up-circle" role="button"></a>
                     </div>
                 </div>
             </nav>
 
             <!-- Dynamic content here -->
-            <main id="content" class="p-4" data-offset="0">
+            <main id="content" class="p-4 flex-shrink-0" data-offset="0">
                 <!-- Loading indicator -->
                 <div class="text-center">
                     <div class="spinner-grow text-success" role="status">
@@ -57,13 +56,17 @@
                 <section id="latest-articles"></section>
                 <hr>
             </main>
+        </div>
 
+        <div class="footer sticky-bottom col col-md-8 col-lg-6 col-xl-5 mx-auto">
+            <div class="text-center">Reach out to Swords of Light on Parkog.</div>
         </div>
     </div>
-
+    <!--
     <footer class="container-fluid fixed-bottom p-0">
         <div class="col col-md-8 col-lg-6 col-xl-5 mx-auto text-center">Reach out to Swords of Light on Parkog.</div>
     </footer>
+    -->
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
