Fix scroll behavior

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container-fluid p-0 p-md h-100 position-relative">
         <div id="main-container" class="col col-md-8 col-lg-6 col-xl-5 mx-auto">
-
+            <a id="top"></a>
             <header class="d-flex flex-column align-items-center mt-1 py-3 text-center">
                 <h1>Pocketbook</h1>
                 <hr class="m-0 mb-2">
